Minor aesthetic changes

--- a/back.html
+++ b/back.html
@@ -154,7 +154,7 @@ Sections get turned off based on which Card Type is displayed.
 }
 </script>
 
-<!--SCRIPT: Slice and add Context Patterns -->
+<!--SCRIPT: Slice and add Context Patterns.-->
 <script>
 {
   const combinations = `{{Context_Patterns}}`;
@@ -392,7 +392,7 @@ Sections get turned off based on which Card Type is displayed.
 }
 </script>
 
-<!--SCRIPT: Check the answer -->
+<!--SCRIPT: Check the answer.-->
 <script>
 {
   const mainDiv = document.getElementById('main-input');
